crates/efr-screen/fixtures/vt/snapshots/dsr_reply__vt100.snap
---
source: crates/efr-screen/src/conformance.rs
input_file: crates/efr-screen/fixtures/vt/dsr_reply.ndjson
---
case: dsr_reply
size: 10x2
cursor: row 0, col 2
title: (none)
rows:
  0 |ab|
  1 ||
title changes: []
bells: 0
replies: ""
